--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@poc/library-a": ["libs/library-a/src/index.ts"],
+      "@poc/library-b": ["libs/library-b/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
